--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,8 @@ language: cpp
 compiler: gcc
 os: linux
 dist: zesty
-
-addons:
-  apt:
-    packages:
-    - cmake
-    - casacore-dev
-    - libgsl-dev
-    - libboost-system-dev
-    - libboost-filesystem-dev
-    - libboost-test-dev
+before_install:
+  - sudo apt-get install -y cmake casacore-dev libgsl-dev libboost-system-dev libboost-filesystem-dev libboost-test-dev
 
 script:
   - mkdir build && cd build && cmake -DCOVERALLS=ON -DCMAKE_BUILD_TYPE=Debug .. && make && make check
