--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ compiler: gcc
 os: linux
 dist: zesty
 before_install:
+  - sudo apt-get -qq update
   - sudo apt-get install -y cmake casacore-dev libgsl-dev libboost-system-dev libboost-filesystem-dev libboost-test-dev
 
 script:
