--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: cpp
 compiler: gcc
 os: linux
-dist: zesty
+dist: artful
 before_install:
-  - sudo add-apt-repository "deb http://archive.ubuntu.com/ubuntu/ zesty main restricted universe multiverse" -y
+  - sudo add-apt-repository "deb http://archive.ubuntu.com/ubuntu/ artful main restricted universe multiverse" -y
   - sudo apt-get -qq update
   - sudo apt-get install -y cmake casacore-dev libgsl0-dev libboost-system-dev libboost-filesystem-dev libboost-test-dev
 
