--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ dist: artful
 before_install:
   - sudo add-apt-repository "deb http://archive.ubuntu.com/ubuntu/ artful main restricted universe multiverse" -y
   - sudo apt-get -qq update
-  - sudo apt-get install -y cmake casacore-dev libgsl0-dev libboost-system-dev libboost-filesystem-dev libboost-test-dev
+  - sudo apt-get install -y cmake casacore-dev libgsl0-dev libboost-system-dev libboost-filesystem-dev
+# libboost-test-dev
 
 script:
-  - mkdir build && cd build && cmake -DCMAKE_BUILD_TYPE=Debug .. && make && make install
+  - mkdir build && cd build && cmake -DCMAKE_BUILD_TYPE=Debug .. && make && sudo make install
