--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ dist: artful
 before_install:
   - sudo add-apt-repository "deb http://archive.ubuntu.com/ubuntu/ artful main restricted universe multiverse" -y
   - sudo apt-get -qq update
-  - sudo apt-get upgrade apt
+  - sudo apt-get full-upgrade apt
   - sudo apt-get install -y cmake casacore-dev libgsl0-dev libboost-system-dev libboost-filesystem-dev libboost-test-dev
 
 script:
