Avoid circular casacore dependencies
By including Dysco in casacore tables, dependences on casa_ms are unwanted. The calls to casacore::MeasurementSet::columnName
are therefore replaced by the string they return.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ project(dysco)
 set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMake)
 
 SET(CASACORE_MAKE_REQUIRED_EXTERNALS_OPTIONAL TRUE)
-find_package(Casacore REQUIRED COMPONENTS casa ms tables measures)
+find_package(Casacore REQUIRED COMPONENTS casa tables)
 
 find_package(GSL REQUIRED)
 
