--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(dysco)
 # Casacore has a separate CMake file in this directory
 set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMake)
 
-SET(CASACORE_MAKE_REQUIRED_EXTERNALS_OPTIONAL TRUE)
+set(CASACORE_MAKE_REQUIRED_EXTERNALS_OPTIONAL TRUE)
 find_package(Casacore REQUIRED COMPONENTS casa tables)
 
 find_package(GSL REQUIRED)
@@ -34,65 +34,81 @@ if(NOT PORTABLE)
     add_compile_options(-march=native)
   endif()
 else()
-  if(USE_AVX512F OR USE_AVX2 OR USE_AVX)
-    message(FATAL_ERROR "Cannot enable AVX features when building portable code.")
+  if(USE_AVX512F
+     OR USE_AVX2
+     OR USE_AVX)
+    message(
+      FATAL_ERROR "Cannot enable AVX features when building portable code.")
   endif()
 endif()
 
-add_library(dyscostman-object OBJECT
-	aftimeblockencoder.cpp
-	dyscostman.cpp
-	dyscodatacolumn.cpp
-	dyscoweightcolumn.cpp
-	stochasticencoder.cpp
-	threadeddyscocolumn.cpp
-	rftimeblockencoder.cpp
-	rowtimeblockencoder.cpp)
-set_property(TARGET dyscostman-object PROPERTY POSITION_INDEPENDENT_CODE 1) 
+add_library(
+  dyscostman-object OBJECT
+  aftimeblockencoder.cpp
+  dyscostman.cpp
+  dyscodatacolumn.cpp
+  dyscoweightcolumn.cpp
+  stochasticencoder.cpp
+  threadeddyscocolumn.cpp
+  rftimeblockencoder.cpp
+  rowtimeblockencoder.cpp)
+set_property(TARGET dyscostman-object PROPERTY POSITION_INDEPENDENT_CODE 1)
 
-# Note: casapy fails if Casa is linked in the storage manager, so we have to trust that
-# casapy's version of casacore is binary compatible with this storage manager's casacore.
+# Note: casapy fails if Casa is linked in the storage manager, so we have to
+# trust that casapy's version of casacore is binary compatible with this storage
+# manager's casacore.
 add_library(dyscostman SHARED $<TARGET_OBJECTS:dyscostman-object>)
 set_target_properties(dyscostman PROPERTIES SOVERSION 0)
-target_link_libraries(dyscostman ${GSL_LIBRARIES} ${CASACORE_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(dyscostman ${GSL_LIBRARIES} ${CASACORE_LIBRARIES}
+                      ${CMAKE_THREAD_LIBS_INIT})
 
 add_executable(dscompress dscompress.cpp stopwatch.cpp)
-target_link_libraries(dscompress dyscostman ${GSL_LIBRARIES} ${CASACORE_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(dscompress dyscostman ${GSL_LIBRARIES}
+                      ${CASACORE_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 
 add_executable(decompress decompress.cpp)
-target_link_libraries(decompress dyscostman ${GSL_LIBRARIES} ${CASACORE_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(decompress dyscostman ${GSL_LIBRARIES}
+                      ${CASACORE_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 
 # add target to generate API documentation with Doxygen
 find_package(Doxygen)
 if(DOXYGEN_FOUND)
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile @ONLY)
-add_custom_target(doc
-        ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
-        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-        COMMENT "Generating API documentation with Doxygen" VERBATIM)
+  configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in
+                 ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile @ONLY)
+  add_custom_target(
+    doc
+    ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+    COMMENT "Generating API documentation with Doxygen"
+    VERBATIM)
 endif(DOXYGEN_FOUND)
 
 find_package(Boost COMPONENTS system filesystem unit_test_framework)
 if(Boost_FOUND)
-	include_directories(${Boost_INCLUDE_DIR})
-  add_executable(runtests EXCLUDE_FROM_ALL
+  include_directories(${Boost_INCLUDE_DIR})
+  add_executable(
+    runtests EXCLUDE_FROM_ALL
     $<TARGET_OBJECTS:dyscostman-object>
-    tests/runtests.cpp 
+    tests/runtests.cpp
     tests/encodeexample.cpp
     tests/testbytepacking.cpp
     tests/testdithering.cpp
     tests/testdyscostman.cpp
-    tests/testtimeblockencoder.cpp
-    )
-  target_link_libraries(runtests ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${GSL_LIBRARIES} ${CASACORE_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+    tests/testtimeblockencoder.cpp)
+  target_link_libraries(
+    runtests ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY}
+    ${GSL_LIBRARIES} ${CASACORE_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
   add_test(runtests runtests)
-  add_custom_target(check COMMAND runtests -l unit_scope DEPENDS runtests)
+  add_custom_target(
+    check
+    COMMAND runtests -l unit_scope
+    DEPENDS runtests)
 else()
   message("Boost testing framework not found.")
 endif()
 
-install (TARGETS dyscostman DESTINATION lib) 
-install (TARGETS dscompress DESTINATION bin)
+install(TARGETS dyscostman DESTINATION lib)
+install(TARGETS dscompress DESTINATION bin)
 
 # Add CPack directory if user wants to generate Debian packages
 if(BUILD_PACKAGES)
