Use INCLUDE_DIRS in CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,7 +85,7 @@ endif(DOXYGEN_FOUND)
 
 find_package(Boost COMPONENTS system filesystem unit_test_framework)
 if(Boost_FOUND)
-  include_directories(${Boost_INCLUDE_DIR})
+  include_directories(${Boost_INCLUDE_DIRS})
   add_executable(
     runtests EXCLUDE_FROM_ALL
     $<TARGET_OBJECTS:dyscostman-object>
