Add possibility to set target CPU architecture
This PR adds the possibility to specify for which CPU architecture the compiler should build binaries. It replaces the existing method where one or more AVX extensions could be enabled by setting the associated variables. The rationale is that it makes more sense to optimize for a certain CPU micro-architecture (and its successors) than to only enable specific AVX features.

The `PORTABLE` option is retained and its behavior doesn't change. I.e., setting `PORTABLE=ON` will instruct the compiler to build binaries that can be run on any X86-64 CPU; setting `PORTABLE=OFF` will instruct the compiler to use the native CPU as target. The user can instruct the compiler to target a specific CPU by setting the CMake variable `TARGET_CPU`. Setting `TARGET_CPU` if `PORTABLE=ON` will raise an error. Setting `TARGET_CPU` to a CPU type the compiler doesn't support will also raise an error.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,27 +20,10 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED YES)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-option(PORTABLE "Generate portable code" OFF)
 option(BUILD_PACKAGES "Build Debian packages" OFF)
-
-if(NOT PORTABLE)
-  if(USE_AVX512F)
-    add_compile_options(-mavx512f)
-  elseif(USE_AVX2)
-    add_compile_options(-mavx2)
-  elseif(USE_AVX)
-    add_compile_options(-mavx)
-  else()
-    add_compile_options(-march=native)
-  endif()
-else()
-  if(USE_AVX512F
-     OR USE_AVX2
-     OR USE_AVX)
-    message(
-      FATAL_ERROR "Cannot enable AVX features when building portable code.")
-  endif()
-endif()
+option(PORTABLE "Build portable binaries (with slightly decreased performance)"
+       OFF)
+include(CMake/SetTargetCPU.cmake)
 
 add_library(
   dyscostman-object OBJECT
